# hid-tmff2--t500-

./: combined_effects_t500.txt  hid-tmt500rs.c  hid-tmt500rs.h
utils/t500rs-test/: build.bat  build.sh  curve_view.c  curve_view.h  device.c  device.h  meson.build  run.bat  run.sh  window.c  window.h
